# chiaki

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install_ffmpeg.sh  install_mesa.sh  install_sdl.sh
cmake/: FindFFMPEG.cmake  FindILClient.cmake
docker/: Dockerfile  Dockerfile.rk3566.arm64  build.sh  docker-compose.yaml
gui/: CMakeLists.txt  example_mappingfile.txt
gui/include/: avopenglwidget.h  mainwindow.h  servericonwidget.h  serveritemwidget.h  settings.h  settingsdialog.h  streamsession.h
gui/src/: avopenglframeuploader.cpp  avopenglwidget.cpp  controllermanager.cpp  main.cpp  mainwindow.cpp  settings.cpp  settingsdialog.cpp  streamsession.cpp  streamwindow.cpp
lib/: CMakeLists.txt
lib/include/chiaki/: ffmpegdecoder.h
lib/src/: ffmpegdecoder.c
rpi/: CMakeLists.txt  main.cpp
rpi/include/rpi/: custom.h  drmprime_out.h  gui.h  host.h  io.h  settings.h
rpi/src/: drmprime_out.c  gui.cpp  host.cpp  io.cpp  main.cpp  settings.cpp
